<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/normal_bg_color"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:elevation="2dp"
        android:background="#ffffff"

        android:gravity="center_vertical" >

        <include layout="@layout/em_commom_back_btn"
            android:id="@+id/rl_back"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/rl_back"
            android:layout_centerVertical="true"
            android:text="@string/title_satifisfaction_eval"
            android:textColor="#de000000"
            android:textSize="20sp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
             >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <com.hyphenate.helpdesk.easeui.widget.CircularImage
                        android:id="@+id/imageView_photo_kefu"
                        android:layout_width="45dip"
                        android:layout_height="45dip"
                        android:src="@drawable/hd_default_avatar"/>

                    <TextView
                        android:id="@+id/textView_name_kefu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dip"
                        android:gravity="center"
                        android:text="@string/nick_service" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/tip_eval"
                    android:textColor="#BABABB"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/tv_description"
                    android:background="#E8E8E9" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tv_description"
                    android:background="#E8E8E9" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="30dip" >

                <RatingBar
                    android:id="@+id/ratingBar1"
                    style="@style/myRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="40dip"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dip"
                    android:numStars="5"
                    android:rating="5"
                    android:stepSize="1.0" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_level_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fa9c64"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                />

            <com.hyphenate.helpdesk.easeui.kefu.flow.FlowTagLayout
                android:id="@+id/id_flowlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />


            <EditText
                android:id="@+id/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dip"
                android:background="@drawable/em_shape_input_bg"
                android:gravity="top|left"
                android:hint="@string/hint_leave_message"
                android:minLines="2"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gray_pressed"
                android:textSize="16sp" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dip"
                android:background="@drawable/hd_bg_sumbit_button"
                android:padding="10dip"
                android:text="@string/tip_btn_sumbit"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>